12764
[Scala compiler version 2.6.0-RC2 -- (c) 2002-2007 LAMP/EPFL]

Code in "Test.scala":
```scala
object Test {
  @throws(classOf[Exception].blah)
  def f() = {}
}
```

Compiler output:
```scala
> scalac Test.scala
Test.scala:2: error: value blah is not a member of java.lang.Class
        @throws(classOf[Exception].blah)
                                  ^
Exception in thread "main" java.lang.Error: no-symbol does not have owner
  at scala.tools.nsc.symtab.Symbols$$NoSymbol$$.owner(Symbols.scala:1419)
  at scala.tools.nsc.transform.SymbolReifier$$class.reify(SymbolReifier.scala:24)
  at scala.tools.nsc.transform.LiftCode$$Reifier.reify(LiftCode.scala:182)
  at scala.tools.nsc.transform.LiftCode$$Reifier.reify(LiftCode.scala:77)
  at scala.tools.nsc.transform.LiftCode$$Reifier.reify(LiftCode.scala:104)
  at scala.tools.nsc.transform.LiftCode$$Reifier.reify(LiftCode.scala:89)
  at scala.tools.nsc.transform.LiftCode.reify(LiftCode.scala:250)
  at scala.tools.nsc.typechecker.Typers$$Typer.annotArg$$0(Typers.scala:1751)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$75.apply(Typers.scala:1756)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$75.apply(Typers.scala:1756)
  at scala.List.map(List.scala:692)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedAnnotation(Typers.scala:1756)
  at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$30.apply(Namers.scala:700)
  at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$30.apply(Namers.scala:699)
  at scala.List.map(List.scala:692)
  at scala.tools.nsc.typechecker.Namers$$Namer.typeSig(Namers.scala:699)
  at scala.tools.nsc.typechecker.Namers$$Namer$$$$anon$$0.complete(Namers.scala:361)
  at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:462)
  at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:570)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2661)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2938)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2971)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$0(Typers.scala:1463)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$57.apply(Typers.scala:1493)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$57.apply(Typers.scala:1493)
  at scala.List$$.loop$$0(List.scala:244)
  at scala.List$$.mapConserve(List.scala:261)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1493)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1111)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1013)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2673)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2938)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2971)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$0(Typers.scala:1463)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$57.apply(Typers.scala:1493)
  at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$57.apply(Typers.scala:1493)
  at scala.List$$.loop$$0(List.scala:244)
  at scala.List$$.mapConserve(List.scala:261)
  at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1493)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2666)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2938)
  at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:2971)
  at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$1.apply(Analyzer.scala:39)
  at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:243)
  at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$2.apply(Global.scala:232)
  at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$2.apply(Global.scala:232)
  at scala.Iterator$$class.foreach(Iterator.scala:375)
  at scala.collection.mutable.ListBuffer$$$$anon$$0.foreach(ListBuffer.scala:255)
  at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:232)
  at scala.tools.nsc.Global$$Run.compileSources(Global.scala:528)
  at scala.tools.nsc.Global$$Run.compile(Global.scala:609)
  at scala.tools.nsc.Main$$.process(Main.scala:86)
  at scala.tools.nsc.Main$$.main(Main.scala:107)
  at scala.tools.nsc.Main.main(Main.scala)
```
